syntax = "proto2";

package changemessage;

option java_package = "com.app.protobuf.change";
option optimize_for = SPEED;

message ChangeMessage {
  required uint64 id = 1;
  required string changeFrom = 2;
  required string changeTo = 3;
  required MessageType mType = 4;
  optional ChangeMessageMode mode = 5 [default = Normal];
}

message MessageType {
  required uint64 id = 1;
  required string value = 2;
}

enum ChangeMessageMode {
  Normal = 1;
  Other = 2;
}
